[package]
name = "qbit-skills"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Agent skills discovery, parsing, and matching for Qbit"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
